Add ConcreteFactory to ContextData