@@ -8,7 +8,6 @@ import org.arend.ext.typechecking.BaseMetaDefinition;
 import org.arend.ext.typechecking.ContextData;
 import org.arend.ext.typechecking.ExpressionTypechecker;
 import org.arend.ext.typechecking.TypedExpression;
-import org.arend.lib.StdExtension;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -16,12 +15,6 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class InMeta extends BaseMetaDefinition {
-  private final StdExtension ext;
-
-  public InMeta(StdExtension ext) {
-    this.ext = ext;
-  }
-
   @Override
   public boolean[] argumentExplicitness() {
     return new boolean[] { true, true };
@@ -29,7 +22,7 @@ public class InMeta extends BaseMetaDefinition {
 
   @Override
   public @Nullable TypedExpression invokeMeta(@NotNull ExpressionTypechecker typechecker, @NotNull ContextData contextData) {
-    ConcreteFactory factory = ext.factory.withData(contextData.getMarker());
+    ConcreteFactory factory = contextData.getFactory();
     List<? extends ConcreteArgument> args = contextData.getArguments();
     ConcreteExpression arg = args.get(0).getExpression();
     if (arg instanceof ConcreteTupleExpression tuple && tuple.getFields().size() != 1) {
@@ -38,12 +31,12 @@ public class InMeta extends BaseMetaDefinition {
         return typechecker.typecheck(factory.app(args.get(1).getExpression(), args.subList(2, args.size())), null);
       }
       List<ConcreteArgument> newArgs = new ArrayList<>(args);
-      newArgs.set(0, factory.arg(fields.get(0), true));
+      newArgs.set(0, factory.arg(fields.getFirst(), true));
       ConcreteExpression result = factory.app(contextData.getReferenceExpression(), newArgs);
       for (int i = 1; i < fields.size() - 1; i++) {
         result = factory.app(contextData.getReferenceExpression(), true, fields.get(i), result);
       }
-      return typechecker.typecheck(factory.app(contextData.getReferenceExpression(), true, fields.get(fields.size() - 1), result), null);
+      return typechecker.typecheck(factory.app(contextData.getReferenceExpression(), true, fields.getLast(), result), null);
     } else {
       return typechecker.typecheck(factory.app(arg, args.subList(1, args.size())), null);
     }
