@@ -7,7 +7,6 @@ import org.arend.ext.typechecking.BaseMetaDefinition;
 import org.arend.ext.typechecking.ContextData;
 import org.arend.ext.typechecking.ExpressionTypechecker;
 import org.arend.ext.typechecking.TypedExpression;
-import org.arend.lib.StdExtension;
 import org.arend.lib.util.Utils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -16,14 +15,8 @@ import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
 
 public class RandomMeta extends BaseMetaDefinition {
-  private final StdExtension ext;
-
-  public RandomMeta(StdExtension ext) {
-    this.ext = ext;
-  }
-
   @Override
-  public @Nullable boolean[] argumentExplicitness() {
+  public boolean @Nullable [] argumentExplicitness() {
     return new boolean[] { true };
   }
 
@@ -43,22 +36,22 @@ public class RandomMeta extends BaseMetaDefinition {
     if (contextData.getArguments().isEmpty()) {
       r = ThreadLocalRandom.current().nextInt();
     } else {
-      List<? extends ConcreteExpression> args = Utils.getArgumentList(contextData.getArguments().get(0).getExpression());
+      List<? extends ConcreteExpression> args = Utils.getArgumentList(contextData.getArguments().getFirst().getExpression());
       if (args.size() == 1 && args.get(0) instanceof ConcreteNumberExpression) {
-        r = ThreadLocalRandom.current().nextInt(((ConcreteNumberExpression) args.get(0)).getNumber().intValue());
+        r = ThreadLocalRandom.current().nextInt(((ConcreteNumberExpression) args.getFirst()).getNumber().intValue());
       } else if (args.size() == 2 && args.get(0) instanceof ConcreteNumberExpression && args.get(1) instanceof ConcreteNumberExpression) {
         int lower = ((ConcreteNumberExpression) args.get(0)).getNumber().intValue();
         int upper = ((ConcreteNumberExpression) args.get(1)).getNumber().intValue();
         if (lower >= upper) {
-          typechecker.getErrorReporter().report(new TypecheckingError("The lower bound must be less than the upper bound", contextData.getArguments().get(0).getExpression()));
+          typechecker.getErrorReporter().report(new TypecheckingError("The lower bound must be less than the upper bound", contextData.getArguments().getFirst().getExpression()));
           return null;
         }
         r = ThreadLocalRandom.current().nextInt(lower, upper);
       } else {
-        typechecker.getErrorReporter().report(new TypecheckingError("Expected either a number or a pair of numbers", contextData.getArguments().get(0).getExpression()));
+        typechecker.getErrorReporter().report(new TypecheckingError("Expected either a number or a pair of numbers", contextData.getArguments().getFirst().getExpression()));
         return null;
       }
     }
-    return typechecker.typecheck(ext.factory.withData(contextData.getMarker().getData()).number(r), contextData.getExpectedType());
+    return typechecker.typecheck(contextData.getFactory().number(r), contextData.getExpectedType());
   }
 }
